--- a/Auth/Auth.Di/Auth.Di.csproj
+++ b/Auth/Auth.Di/Auth.Di.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\WelcomeDev\WelcomeDev.Provider.Di\WelcomeDev.Provider.Di.csproj" />
+  </ItemGroup>
+
 </Project>
