--- a/Statistic/Statistic.Di/Statistic.Di.csproj
+++ b/Statistic/Statistic.Di/Statistic.Di.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Auth\Auth.Di\Auth.Di.csproj" />
     <ProjectReference Include="..\..\WelcomeDev\WelcomeDev.Provider.Di\WelcomeDev.Provider.Di.csproj" />
   </ItemGroup>
 
