--- a/Pomodoro/Pomodoro.Di/Pomodoro.Di.csproj
+++ b/Pomodoro/Pomodoro.Di/Pomodoro.Di.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Auth\Auth.Di\Auth.Di.csproj" />
+  </ItemGroup>
+
 </Project>
