--- a/Pomodoro/Pomodoro.Bll/Pomodoro.Bll.Provider/Pomodoro.Bll.Provider.Mock/Pomodoro.Bll.Provider.Mock.csproj
+++ b/Pomodoro/Pomodoro.Bll/Pomodoro.Bll.Provider/Pomodoro.Bll.Provider.Mock/Pomodoro.Bll.Provider.Mock.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Pomodoro.Di\Pomodoro.Di.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="source\" />
+  </ItemGroup>
+
 </Project>
