add: minor + dto

--- a/Pomodoro/Pomodoro.Service/Pomodoro.Service.csproj
+++ b/Pomodoro/Pomodoro.Service/Pomodoro.Service.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Auth\Auth.Di\Auth.Di.csproj" />
+    <ProjectReference Include="..\Pomodoro.Bll\Pomodoro.Bll.Provider\Pomodoro.Bll.Provider.Mock\Pomodoro.Bll.Provider.Mock.csproj" />
     <ProjectReference Include="..\Pomodoro.Di\Pomodoro.Di.csproj" />
   </ItemGroup>
 
