--- a/Pomodoro/Pomodoro.Bll/Pomodoro.Bll.Provider/Pomodoro.Bll.Provider.Mock/Pomodoro.Bll.Provider.Mock.csproj
+++ b/Pomodoro/Pomodoro.Bll/Pomodoro.Bll.Provider/Pomodoro.Bll.Provider.Mock/Pomodoro.Bll.Provider.Mock.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\WelcomeDev\WelcomeDev.Utils\WelcomeDev.Utils.csproj" />
     <ProjectReference Include="..\..\..\Pomodoro.Di\Pomodoro.Di.csproj" />
   </ItemGroup>
 
