--- a/Pomodoro/Pomodoro.Service/Pomodoro.Service.csproj
+++ b/Pomodoro/Pomodoro.Service/Pomodoro.Service.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Auth\Auth.Di\Auth.Di.csproj" />
+    <ProjectReference Include="..\..\WelcomeDev\WelcomeDev.Provider.Di\WelcomeDev.Provider.Di.csproj" />
     <ProjectReference Include="..\Pomodoro.Bll\Pomodoro.Bll.Provider\Pomodoro.Bll.Provider.Mock\Pomodoro.Bll.Provider.Mock.csproj" />
     <ProjectReference Include="..\Pomodoro.Di\Pomodoro.Di.csproj" />
   </ItemGroup>
