--- a/WebApp/WebApp/package.json
+++ b/WebApp/WebApp/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@iconify/react": "^3.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -43,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "@iconify/react": "^3.0.1"
   }
 }
