--- a/WebApp/WebApp/package.json
+++ b/WebApp/WebApp/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "classnames": "^2.3.1",
     "jest-editor-support": "^30.0.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
