--- a/WebApp/WebApp/package.json
+++ b/WebApp/WebApp/package.json
@@ -11,10 +11,13 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "classnames": "^2.3.1",
+    "fp-ts": "^2.11.5",
+    "io-ts": "^2.2.16",
     "jest-editor-support": "^30.0.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^3.0.1",
+    "@types/react-router-dom": "^5.3.2",
     "sass": "^1.43.4"
   }
 }
