--- a/WebApp/WebApp/package.json
+++ b/WebApp/WebApp/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "fp-ts": "^2.11.5",
     "io-ts": "^2.2.16",
