--- a/Statistic/Statistic.Service/Properties/launchSettings.json
+++ b/Statistic/Statistic.Service/Properties/launchSettings.json
@@ -1,23 +1,23 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49292",
-      "sslPort": 44374
+      "applicationUrl": "http://localhost:51669/",
+      "sslPort": 44315
     }
   },
   "profiles": {
     "Statistic.Service": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7224;http://localhost:5224",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7224;http://localhost:5224",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
