--- a/WebApp/WebApp/package.json
+++ b/WebApp/WebApp/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.19.5",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
     "tslint": "^6.1.3",
