--- a/WebApp/WebApp/package.json
+++ b/WebApp/WebApp/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.5",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
     "tslint": "^6.1.3",
