--- a/Auth/Auth.Service/appsettings.json
+++ b/Auth/Auth.Service/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWT": {
+    "Expires": 3,
+    "Token": "c6b47545-92e7-4ca1-94ec-c9b825f151c8"
+  }
   "AllowedHosts": "*"
 }
