--- a/Pomodoro/Pomodoro.Service/appsettings.json
+++ b/Pomodoro/Pomodoro.Service/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "PomodoroDb": "Server=(localdb)\\mssqllocaldb;Database=pomodorodb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "StatisticDb": "Server=(localdb)\\mssqllocaldb;Database=statisticdb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Validation": {
     "Duration": {
       "MaxWorkHour": 5,
