--- a/WebApp/WebApp/package.json
+++ b/WebApp/WebApp/package.json
@@ -15,6 +15,7 @@
     "fp-ts": "^2.11.5",
     "io-ts": "^2.2.16",
     "jest-editor-support": "^30.0.2",
+    "mobx": "^6.3.8",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,6 +25,7 @@
     "react-scripts": "4.0.3",
     "tslint": "^6.1.3",
     "typescript": "^4.4.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -53,6 +55,7 @@
   "devDependencies": {
     "@iconify/react": "^3.1.0",
     "@types/react-router-dom": "^5.3.2",
+    "@types/uuid": "^8.3.3",
     "sass": "^1.43.4"
   }
 }
