--- a/WebApp/WebApp/package.json
+++ b/WebApp/WebApp/package.json
@@ -16,6 +16,7 @@
     "io-ts": "^2.2.16",
     "jest-editor-support": "^30.0.2",
     "mobx": "^6.3.8",
+    "mobx-react": "^7.2.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
