--- a/WebApp/WebApp/package.json
+++ b/WebApp/WebApp/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.5",
     "react-loader-spinner": "^4.0.0",
+    "react-number-format": "^4.8.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
     "tslint": "^6.1.3",
