--- a/Statistic.Bll.Provider.MySql/Statistic.Bll.Provider.MySql.csproj
+++ b/Statistic.Bll.Provider.MySql/Statistic.Bll.Provider.MySql.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Auth\Auth.Di\Auth.Di.csproj" />
+    <ProjectReference Include="..\Statistic\Statistic.Di\Statistic.Di.csproj" />
   </ItemGroup>
 
 </Project>
