--- a/WebApp/WebApp/package.json
+++ b/WebApp/WebApp/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/chart.js": "^2.9.35",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "axios": "^0.24.0",
+    "chart.js": "^3.7.0",
     "classnames": "^2.3.1",
     "fp-ts": "^2.11.5",
     "io-ts": "^2.2.16",
