--- a/Statistic.Bll.Provider.MySql/Statistic.Bll.Provider.MySql.csproj
+++ b/Statistic.Bll.Provider.MySql/Statistic.Bll.Provider.MySql.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Auth\Auth.Di\Auth.Di.csproj" />
     <ProjectReference Include="..\Statistic\Statistic.Di\Statistic.Di.csproj" />
+    <ProjectReference Include="..\Statistic\Statistic.Service\Statistic.Service.csproj" />
   </ItemGroup>
 
 </Project>
